--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^8.2.6",
+    "firebase-admin": "^9.4.2",
+    "firebaseui": "^4.7.3",
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "vue": "^2.6.11",
